k8s/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-user-srtknk
  labels:
    name: server-user-srtknk
spec:
  type: ClusterIP
  selector:
    component: server-user-srtknk
  ports:
    - port: 8080
      targetPort: 8080
