k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-user-srtknk
  labels:
    name: server-user-srtknk
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: server-user-srtknk.cxnam.ews.en.internal
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: server-user-srtknk
              servicePort: 8080
